@@ -606,4 +606,5 @@ Changes since version 1.5-16
 	        * fixed corner case with one group being all NA and other non-varying,
 	        * print.pvar: better handling of NA values.
 	* lag/lead: fixed bug with dropped factor levels, added testfile tests/test_lag_lead_factor_levels.R.
+	* is.pconsecutive: new function to check if time periods are consecutive per individual.
 	
